<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:background="@drawable/nav_bar">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/program_btBack" android:background="@drawable/bt_back"
                android:layout_marginTop="@dimen/program_bt_back_margin_top"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/program"
                android:textSize="@dimen/program_tv_Program_size"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:id="@+id/tvProgram" android:layout_toRightOf="@+id/program_btBack"
                android:layout_alignTop="@+id/program_btBack"
                android:layout_marginLeft="@dimen/program_tv_Program_margin_left"
                android:layout_marginTop="@dimen/program_tv_Program_margin_top"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/program_backgroud">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/program_ivImage"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="@dimen/program_iv_Program_margin_top"
                android:layout_marginLeft="@dimen/program_iv_Program_margin_left"
                android:layout_alignParentTop="true" android:src="@drawable/content_image2x"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/program_time"
                android:textColor="@color/grey_while"
                android:textSize="@dimen/program_tvTime_size"
                android:layout_marginLeft="@dimen/program_tvTime_margin_left"
                android:id="@+id/program_tvTime"
                android:layout_toRightOf="@+id/program_ivImage" android:layout_alignParentTop="true"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/program_name"
                android:id="@+id/program_tvName"
                android:layout_toRightOf="@+id/program_ivImage"
                android:textSize="@dimen/program_tvName_size"
                android:textStyle="bold"
                android:textColor="@color/grey"
                android:layout_marginLeft="@dimen/program_tvName_margin_left"
                android:layout_below="@+id/program_tvTime"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/program_title"
                android:layout_marginLeft="@dimen/program_tvTitle_margin_left"
                android:id="@+id/program_tvTitle"
                android:layout_toRightOf="@+id/program_ivImage"
                android:layout_below="@+id/program_tvName"
                android:textSize="@dimen/program_tvTitle_size"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/program_view"
                android:layout_marginLeft="@dimen/program_tvView_margin_left"
                android:layout_marginTop="@dimen/program_tvView_margin_top"
                android:id="@+id/program_tvView"
                android:layout_toRightOf="@+id/program_ivImage"
                android:layout_below="@+id/program_tvTitle"
                android:textSize="@dimen/program_tvView_size"
                android:drawableLeft="@drawable/content_image_view"
                android:drawablePadding="@dimen/program_tvView_padding_left"
                android:textColor="@color/grey_while"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/program_time_play"
                android:layout_marginLeft="@dimen/program_tvPlayTime_margin_left"
                android:layout_marginTop="@dimen/program_tvPlayTime_margin_top"
                android:id="@+id/program_tvPlayTime"
                android:layout_toRightOf="@+id/program_tvView"
                android:layout_below="@+id/program_tvTitle"
                android:textSize="@dimen/program_tvPlayTime_size"
                android:drawableLeft="@drawable/content_image_played"
                android:textColor="@color/grey_while"
                />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/program_tvLike"
                android:layout_marginLeft="@dimen/program_tvLike_margin_left"
                android:layout_marginTop="@dimen/program_tvLike_margin_top"
                android:id="@+id/program_tvLike"
                android:layout_toRightOf="@+id/program_tvPlayTime"
                android:layout_below="@+id/program_tvTitle"
                android:textSize="@dimen/program_tvLike_size"
                android:drawableLeft="@drawable/content_image_like"
                android:textColor="@color/grey_while"
                />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/conten_imagenote"
                android:layout_marginLeft="@dimen/program_btEdit_margin_left"
                android:layout_marginTop="@dimen/program_btEdit_margin_top"
                android:id="@+id/program_btEdit"
                android:layout_below="@+id/program_ivImage"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/content_lineicon"
                android:layout_toRightOf="@+id/program_btEdit"
                android:id="@+id/program_etLine"
                android:layout_below="@+id/program_ivImage"
                android:layout_marginLeft="@dimen/program_etLine_margin_left"
                android:layout_marginTop="@dimen/program_btEdit_margin_top"
                />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/content_imageryclebin"
                android:layout_marginLeft="@dimen/program_btDelete_margin_left"
                android:layout_marginTop="@dimen/program_btDelete_margin_top"
                android:id="@+id/program_btDelete"
                android:layout_toRightOf="@+id/program_etLine"
                android:layout_below="@+id/program_ivImage"
                android:textSize="@dimen/program_tvDelete_size"
                android:textColor="@color/grey_while"
                />
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/content_buttonfavorite"
                android:layout_marginLeft="@dimen/program_btFavorite_margin_left"
                android:layout_marginTop="@dimen/program_btFavorite_margin_top"
                android:id="@+id/program_btFavorite"
                android:layout_toRightOf="@+id/program_btDelete"
                android:layout_below="@+id/program_ivImage"
                />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/content_buttonlike"
                android:layout_marginLeft="@dimen/program_btLike_margin_left"
                android:layout_marginTop="@dimen/program_btLike_margin_top"
                android:id="@+id/program_btLike"
                android:layout_toRightOf="@+id/program_btFavorite"
                android:layout_below="@+id/program_ivImage"
                />


        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/content_buttonlist"
                android:layout_marginLeft="@dimen/program_btLike_margin_left"
                android:layout_marginTop="@dimen/program_btLike_margin_top"
                android:id="@+id/program_btList"
                android:layout_toRightOf="@+id/program_btLike"
                android:layout_below="@+id/program_ivImage"
                />
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/content_twitterbutton"
                android:layout_marginLeft="@dimen/program_btTwitter_margin_left"
                android:layout_marginTop="@dimen/program_btTwitter_margin_top"
                android:id="@+id/program_btTwitter"
                android:layout_toRightOf="@+id/program_btList"
                android:layout_below="@+id/program_ivImage"
                />
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/content_buttonfacebook"
                android:layout_marginLeft="@dimen/program_btTwitter_margin_left"
                android:layout_marginTop="@dimen/program_btTwitter_margin_top"
                android:id="@+id/program_btFacebook"
                android:layout_toRightOf="@+id/program_btTwitter"
                android:layout_below="@+id/program_ivImage"
                />


    </RelativeLayout>
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/content_group_background">


        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/program_btPlayOrStop"
                android:background="@drawable/content_bt_pause"
                android:layout_marginLeft="@dimen/program_bt_PlayOrPause_margin_left"
                />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/program_tvTimeCur"
                android:layout_toRightOf="@+id/program_btPlayOrStop"
                android:layout_marginLeft="@dimen/program_tvTimeCur_margin_left"
                android:layout_marginTop="@dimen/program_tvTimeCur_margin_top"
                android:text="@string/program_timeCurPlay"
                android:textSize="@dimen/program_tvLike_size"
                android:textColor="@color/ColorTextViewTime"
                />
        <SeekBar
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:id="@+id/program_sbTime"
                android:layout_toRightOf="@+id/program_tvTimeCur"
                android:layout_marginLeft="@dimen/program_sbTime_margin_left"
                android:layout_marginRight="@dimen/program_sbTime_margin_right"
                android:layout_marginTop="@dimen/program_sbTime_margin_top"
                android:max="100" android:progress="1" android:indeterminate="false"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/program_tvTimePlay"
                android:layout_toRightOf="@+id/program_sbTime"
                android:layout_marginRight="@dimen/program_tvTimePlay_margin_right"
                android:layout_marginTop="@dimen/program_tvTimePlay_margin_top"
                android:text="@string/program_timePlay"
                android:textSize="@dimen/program_tvLike_size"
                android:textColor="@color/ColorTextViewTime"
                />


        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/program_btMute"
                android:background="@drawable/content_image_volume1"
                android:layout_toRightOf="@+id/program_btPlayOrStop"
                android:layout_marginLeft="@dimen/program_btMute_margin_left"
                android:layout_marginTop="@dimen/program_btMute_margin_top"
                />
        <SeekBar
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:id="@+id/program_sbVolume"
                android:layout_toRightOf="@+id/program_btMute"
                android:layout_below="@+id/program_sbTime"
                android:layout_marginLeft="@dimen/program_sbTime_margin_left"
                android:layout_marginRight="@dimen/program_sbTime_margin_right"
                android:layout_marginTop="@dimen/program_sbTime_margin_top"
                android:max="100" android:progress="1" android:indeterminate="false"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/content_image_volumn2"
                android:id="@+id/program_btAdjustVolumn"
                android:layout_toRightOf="@+id/program_sbVolume"
                android:layout_below="@+id/program_tvTimePlay"
                android:layout_marginRight="@dimen/program_tvTimePlay_margin_right"
                android:layout_marginTop="@dimen/program_tvTimePlay_margin_top"
                />
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/program_backgroud"

            >

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:weightSum="1">
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/program_btThumnail"
                    android:id="@+id/program_btThumnail" android:layout_weight="0.33"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/program_btDetail"
                    android:id="@+id/program_btDetail" android:layout_weight="0.33"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/program_btComment"
                    android:id="@+id/program_btComment" android:layout_weight="0.34"/>
        </LinearLayout>
        <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/program_ivDetail"
                android:layout_below="@+id/program_btThumnail"
                android:src="@drawable/content_image_detail"
                android:layout_marginRight="@dimen/program_ivDetail_margin"
                android:layout_marginTop="@dimen/program_ivDetail_margin_top"
                android:layout_marginLeft="@dimen/program_ivDetail_margin"
                android:layout_marginBottom="@dimen/program_ivDetail_margin"
                android:contentDescription=""/>
    </RelativeLayout>

</LinearLayout>

